fix letter-spacing

--- a/source/_css/components/_post.scss
+++ b/source/_css/components/_post.scss
@@ -29,7 +29,7 @@
   }
   .post-content {
     text-rendering: optimizelegibility;
-    letter-spacing: 0.0765em;
+    letter-spacing: 0.05em;
     font-family: map-get($font-families, "post-content");
     color: map-get($colors, base);
     margin-top: 20px;
